# ns.py

./: .gitignore  AGENTS.md  CITATION.cff  README.md  description.txt  exp.py  parallel_servers.py  pyproject.toml  requirements.txt  setup.py  tcp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  request-for-comments.md
.github/workflows/: ns.py-test.yml  pypi_publish.yml
cython/ns/: setup.py
cython/simpy/: setup.py
demux/: fib_demux.py  flow_demux.py  random_demux.py
docs/emulation/: emulation_mode.drawio
examples/: ack.py  basic.py  bbr.py  bursty_traffic_generation.py  drr.py  drr_jumbo.py  exp.py  fair_packet_switch.py  fattree-fifo.py  fattree.py  fattree_fifo.py  fattree_tcp.py  mm1.py  overloaded_switch.py  queue_level_drr.py  queue_network.py  red_wfq.py  static_priority.py  tcp.py  token_bucket.py  two_level_drr.py  two_level_sp.py  two_level_wfq.py  two_rate_token_bucket.py  virtual_clock.py  wfq.py
examples/benchmarks/: fattree_tcp.py
examples/pipeline/: MAP_MSP_trace_generator.py  Pareto_on_off_trace_generator.py
examples/real_traffic/: echo_client.py  echo_server.py  https_server.py  proxy.py  tcp_echo_client.py  tcp_echo_server.py  (+2 more)
flow/: flow.py
ns/: __init__.py
packet/: dist_generator.py  generator.py  packet.py  sink.py  trace_generator.py
port/: monitor.py  port.py  red_port.py  wire.py
scheduler/: drr.py  monitor.py  sp.py  virtual_clock.py  wfq.py
shaper/: token_bucket.py
switch/: monitor.py  switch.py
tests/: conftest.py
topos/: fattree.py  utils.py
utils/: components.py  splitter.py  stampedstore.py
(+566 files in other folders)
