[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ns.py"
version = "0.4.4"
description = "ns.py: a pythonic discrete-event network simulator"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "TL-System" }
]
keywords = [
  "discrete-event simulator",
  "computer networking",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "simpy",
  "networkx",
  "pyyaml",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/TL-System/ns.py"
Repository = "https://github.com/TL-System/ns.py"

[tool.hatch.build.targets.wheel]
packages = ["ns"]
